Applied patch from jalopeura on ticket #7458 and reworked it to use the BMailDaemon::MarkAsRead() method when an account id exists. Added a TODO note about using menu labels in tests while they could someday be translated. Replaced some hardcoded strings with the proper defines. Made the add-on also apply partial emails, I suppose it's the intent. Works for me.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42972 a95241bf-73f2-0310-859d-f6bbb57e9c96